# echo

./: .gitignore  .gitmodules  BLE_ADVERTISING_GUIDE.md  CMakeLists.txt  GATT_DEMO_INSTRUCTIONS.md  Info.plist  LICENSE  MACOS_BUILD.md  MESH_IMPLEMENTATION.md  README.md  Win_build_instructions.md  advertise_echo.py  build.bat  build.ps1  build_commands.txt  build_quick.bat  check_devmode.bat  echo_build.bat  quick_start.md  read_identity.py  rebuild.bat  rebuild.sh  rebuild_macos.sh  run_echo.bat  run_echo.sh  run_echo_macos.sh  setup.bat  setup.ps1  setup.sh  setup_firewall.bat  setup_firewall.sh  setup_macos.sh  setup_optimized.bat  wifi_troubleshooting_win.md
docs/: MACOS_ADVERTISING.md
src/: main.cpp
src/core/bluetooth/: BluetoothManager.cpp  BluetoothManager.h  BluezAdvertiser.cpp  BluezAdvertiser.h  EchoAdvertiser.h  MacOSAdvertiser.h  MacOSAdvertiser.mm  WindowsAdvertiser.cpp  WindowsAdvertiser.h
src/core/commands/: IRCParser.cpp  IRCParser.h
src/core/crypto/: UserIdentity.cpp  UserIdentity.h
src/core/mesh/: MeshNetwork.cpp  MeshNetwork.h
src/core/network/: WifiDirect.cpp  WifiDirect.h
src/core/protocol/: CompressedMessage.cpp  CompressedMessage.h  FileTransfer.cpp  FileTransfer.h  MessageTypes.cpp  MessageTypes.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h
tests/: test_compressed_message.cpp
